# pyproject.toml

[tool.poetry]
name = "financial-news-finetune"
version = "0.1.0"
description = "Fine-tuning models on financial news"
authors = ["Vaishnavi Suresh <vs2753@nyu.edu>"]
readme = "README.md"
license = "MIT"

# If your package directory is `src/financial_news_finetune`, set package include accordingly
packages = [{ include = "financial_news_finetune", from = "src" }]

[project]
name = "fin-news"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets (==3.6.0)",
    "trl (==0.11.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
